# imacProject

./: README.md
project/: CMakeLists.txt
project/template/: CMakeLists.txt  main.cpp
project/template/include/: Mesh.h  Model.h  Shader.h  camera.hpp  game.hpp  interface.hpp  mesh.hpp  model.hpp  music.hpp  object.hpp  scene.hpp  shader.hpp
project/template/models/: testOBJ.mtl
project/template/models/sabre_Luke/: sabre_Luke.mtl
project/template/models/sabre_ObiWan/: sabre_ObiWan.mtl
project/template/models/sabre_Vador/: sabre_Vador.mtl
project/template/models/sdcard/: SD_Card.mtl
project/template/scenes/: sceneTest.txt  sceneTest2.txt  scene_0.txt  scene_1.txt
project/template/shaders/: 3D.vs.glsl  directionallights.fs.glsl  lamp.frag  lamp.vs  lighting.vs  modelLoading.frag  modelLoading.fs.glsl  modelLoading.vs  multiTex3D.fs.glsl  normals.fs.glsl  pointlights.fs.glsl  tex2D.fs.glsl  tex2D.vs.glsl
project/template/src/: camera.cpp  freeFlyCamera.cpp  game.cpp  game_s.cpp  interface.cpp  mesh.cpp  model.cpp  music.cpp  object.cpp  scene.cpp  shader.cpp
